--- a/scss/foundations/_mixins.scss
+++ b/scss/foundations/_mixins.scss
@@ -27,3 +27,42 @@
         @content;
     }
 }
+
+
+
+@mixin h1 {
+    font-size: $giant-font-size;
+    font-weight: $font_weight-bold;
+}
+
+@mixin h2 {
+    font-size: $bigger-font-size;
+    font-weight: $font_weight-bold;
+}
+
+@mixin h3 {
+    font-size: $big-font-size;
+    font-weight: $font_weight-bold;
+}
+
+@mixin h4 {
+    font-size: $medium-font-size;
+    font-weight: $font_weight-bold;
+}
+
+@mixin h5 {
+    font-size: $regular-font-size;
+    font-weight: $font_weight-semibold;
+}
+
+
+@mixin p1 {
+    font-size: $regular-font-size;
+    font-weight: $font_weight-medium;
+    line-height: 1.25;
+}
+
+@mixin p2 {
+    font-size: $small-font-size;
+    font-weight: $font_weight-regular;
+}
