--- a/scss/foundations/_variables.scss
+++ b/scss/foundations/_variables.scss
@@ -7,6 +7,9 @@ $white: #fff;
 $gray: #b6b6b6;
 $black: #000;
 $red : #EE140A;
+$gris: #B6B6B6;
+
+
 
 $small-font-size: rem(13);
 $regular-font-size: rem(18);
@@ -17,12 +20,21 @@ $giant-font-size: rem(95);
 
 $primary-font-familly: Helvetica, Sans-Serif;
 
+// style texte
+$font_weight-regular: 400;
+$font_weight-medium: 500;
+$font_weight-semibold: 600;
+$font_weight-bold: 700;
+
 // media queries
 $small: 600px;
 $medium: 760px;
 $large: 960px;
-  
- 
+
+
+
+
+
 
 
 
