--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,34 @@
 @import "./foundations/reset";
 @import "./foundations/variables";
 
- body {
-    font-family: $primary-font-familly;
-    font-size: $medium-font-size;
-    line-height: 1,2;
- }
+body {
+   font-family: $primary-font-familly;
+   font-size: $medium-font-size;
+   line-height: 1, 2;
+}
+
+
+h1,
+.h1 {
+   @include h1;
+}
+
+h2,
+.h2 {
+   @include h2;
+}
+
+h3,
+.h3 {
+   @include h3;
+}
+
+h4,
+.h4 {
+   @include h4;
+}
+
+h5,
+.h5 {
+   @include h5;
+}
